--- a/templates/admin/challenges/index.html.twig
+++ b/templates/admin/challenges/index.html.twig
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        {% include 'admin/ajax/_filter.html.twig' %}
+        {% include 'admin/ajax/_filtervente.html.twig' %}
 
         <div class="mytables" id="ma_table_Sites">
             <div class="row">
