--- a/templates/security/forgotpassword.html.twig
+++ b/templates/security/forgotpassword.html.twig
@@ -2,18 +2,11 @@
 
 {% block body %}
 
-    <img style="right: 0; padding-bottom: 170px; position: fixed;" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
+    <img class="logo_blanc" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
 
     <div class="container mb-5">
 
-        {% for message in app.flashes('success') %}
-            <div class="alert alert-success mt-5">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% endfor %}
+        {% include 'notifications/notification.html.twig' %}
 
         {% if errors %}
             <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
@@ -29,30 +22,23 @@
             </div>
         {% endif %}
 
-        <div id="forgotpassword" class="card">
-            <center>
-                </br>
-                <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
-            </center>
-            <div class="card-body mt-4">
-                <center>
-                    <b>Vous avez oublié votre de mot de passe ?</b></br></br>
+        <div class="card login">
+            <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
+            <div class="card-body mt-5">
+                <p class="text-center mt-4"><b>Vous avez oublié votre de mot de passe ?</b></p>
                     <form action="{{ path('forgot-password') }}" method="POST">
-                        <div class="form-group">
+                        <div class="form-group mt-5">
                             <input type="text" name="email" class="form-control" placeholder="Saissisez votre adresse email" required>
-                        </div></br>
-                        <center>
-                            <button id="boutons" style="background-color: #9D1458;" type="submit" class="btn btn-light"><span style="color: white;">Confirmer</span></button>
-                        </center>
+                        </div>
+                        <button id="security_button" type="submit" class="btn btn-light">Confirmer</button>
                     </form>
-                </center>
             </div>
         </div>
+
+        <p id="fin">Powered by Pepperbay</p>
     </div>
 
-    <div id="fin">
-        <p>Powered by Pepperbay</p>
-    </div>
+
 
 
 {% endblock %}
