--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,66 +2,30 @@
 
 {% block body %}
 
-
-    <img style="right: 0; padding-bottom: 170px; position: fixed;" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
+    <img class="logo_blanc" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
     <div class="container mb-5">
 
-        {% for message in app.flashes('success') %}
-            <div class="alert alert-success mt-5">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% endfor %}
+        {% include 'notifications/notification.html.twig' %}
 
-        {% for message in app.flashes('error') %}
-            <div class="alert alert-danger mt-5">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% endfor %}
-
-
-        {% if error %}
-            <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
-                {{ error.messagekey | trans(error.messagedata, 'security') }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        {% endif %}
-
-        <div id="login" class="card">
-            <center>
-                </br>
-                <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
-                </br>
-            </center>
-            <div class="card-body mt-2">
+        <div class="card login">
+            <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
+            <div class="card-body mt-5">
                 <form action="{{ path('security_login') }}" method="post">
                     <div class="form-group">
                         <input type="text" id="username" name="_username" class="form-control" value="{{ last_username }}" placeholder="Saissisez votre adresse email" required>
-                    </div></br>
-                    <div class="form-group">
+                    </div>
+                    <div class="form-group pt-4 pb-2">
                         <input type="password" id="password" name="_password" class="form-control" placeholder="Saissisez votre mot de passe" required>
-                    </div></br>
-                    <center><a style="text-decoration: underline;" href="{{ path('forgot-password') }}">Mot de passe oublié ?</a></center></br>
-                    <center>
-                        <button id="boutons" style="background-color: #9D1458;" type="submit" class="btn btn-outline-light mt-2"><span style="color: white;">connexion</span></button>
-                    </center>
+                    </div>
+                    <div class="text-center pt-2">
+                        <a href="{{ path('forgot-password') }}"><u>Mot de passe oublié ?</u></a>
+                    </div>
+                    <button id="security_button" type="submit" class="btn btn-outline-light mt-2">connexion</button>
                 </form>
             </div>
         </div>
 
+        <p id="fin">Powered by Pepperbay</p>
     </div>
-
-    <div id="fin">
-        <p>Powered by Pepperbay</p>
-    </div>
-
-
 
 {% endblock %}
