--- a/templates/security/forgotpassword.html.twig
+++ b/templates/security/forgotpassword.html.twig
@@ -22,7 +22,7 @@
             </div>
         {% endif %}
 
-        <div class="card login">
+        <div class="card security_card">
             <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
             <div class="card-body mt-5">
                 <p class="text-center mt-4"><b>Vous avez oublié votre de mot de passe ?</b></p>
