--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,7 +7,7 @@
 
         {% include 'notifications/notification.html.twig' %}
 
-        <div class="card login">
+        <div class="card security_card">
             <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
             <div class="card-body mt-5">
                 <form action="{{ path('security_login') }}" method="post">
