--- a/templates/security/validate.html.twig
+++ b/templates/security/validate.html.twig
@@ -4,7 +4,7 @@
 
     <img class="logo_blanc" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
 
-    <div class="card login">
+    <div class="card security_card">
         <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
         <div class="card-body">
             <p class="text-center mt-5"><b>Merci pour votre inscription</b></p>
