--- a/templates/security/reset.html.twig
+++ b/templates/security/reset.html.twig
@@ -19,7 +19,7 @@
     </div>
 
     <img class="logo_blanc" src="{{ asset('assets/images/logo_blanc.svg') }}" alt="logo" width="250" height="250">
-    <div class="card login">
+    <div class="card security_card">
         <img src="{{ asset('assets/images/logo_couleur.svg') }}" alt="logo" width="300" height="75">
         <div class="card-body mt-5">
             <form action="" method="POST">
